8330819: C2 SuperWord: bad dominance after pre-loop limit adjustment with base that has CastLL after pre-loop

Reviewed-by: mbaesken
Backport-of: e681e9b4d78c57d031e08e11dfa6250d1f52f5f5